phalcon/css/core-custom.css
.home-sponsors {
  margin-bottom: 40px;
}

.slick-loading .slick-list {
  background: none;
}

.features-slider__nav-item:before,
.features-slider__nav-item:after {
  content: '';
}

@media (max-width: 767px) {
  .info .buildwith-nav__list {
    display: block;
  }
}

.buildwith-nav__list a {
  text-align: center;
}

.lang-image {
  height: 20px;
  width: 20px;
}

.header-dropdown--mobile-lang a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.header-dropdown--mobile-lang img {
  margin-right: 5px;
}

.mobile-menu-page-lang:after{
  content: url(https://assets.phalcon.io/phalcon/images/svg/arrow.svg);
  display: inline-block;
  vertical-align: top;
  margin-left: 2px;
}

.header-nav--mobile .extendable a:after{
  content: url(https://assets.phalcon.io/phalcon/images/svg/arrow.svg);
  margin-left: 5px;
}

.header-nav--mobile .header-dropdown--mobile a:after {
  display: none;
}

.phalcon-blog__last-article .phalcon-blog__item-img {
  height: 100%;  
}

.phalcon-blog__last-article .phalcon-blog__item-img > img {
  max-width: 100%;  
}

.contributors__list-item {
  width: 58px;
  flex-basis: 58px;;
  max-width: 58px;;
}

.info .contributors__list-item {
  flex-basis: 80px;
  max-width: 80px;
  width: 80px;}

@media (max-width: 1279px) {
  .info .contributors__list-item {
    flex-basis: 60px;
    max-width: 60px;
    width: 60px;} }

@media (max-width: 1023px) {
  .contributors__list-item {
    flex-basis: 60px;
    max-width: 60px;
    width: 60px; }

  .info .contributors__list-item {
    flex-basis: 66px;
    max-width: 66px;
    width: 66px; }
}

@media (max-width: 767px) {
  .contributors__list-item {
    flex-basis: 51px;
    max-width: 51px;
    width: 51px; }

  .info .contributors__list-item {
    flex-basis: 59px;
    max-width: 59px;
    width: 59px; }

  .features-accordion li.active .features-accordion__content {
    max-height: 100%;
  }

  .feature__code .hljs {
    font-size: 12px;
  }
}

.contributors__list {
  justify-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
}

.pagination a {
  color: #385b56;
  line-height: 23px;
  font-size: 16px;
  border-bottom: 1px solid #385b56;
  -webkit-transition: all .125s;
  -o-transition: all .125s;
  transition: all .125s;
}

.pagination a:hover {
  border-bottom-color: transparent;
}

.sponsors__list {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-bottom: -15px;
  justify-content: center;
}

.sponsors__item {
  height: 35px;
  width: 17%;
  margin: 15px;
  text-align: center;
}

@media (max-width: 767px) {
  .sponsors__item {
    height: 30px;
    margin: 0 25px 15px;
    width: 30%;
  }

  .features-slider__descr {
    font-size: 13px;
    line-height: normal;
    margin-bottom: 15px;
  }

  .features-slider__example ul{
    padding: 0 20px;
  }

  .features-slider__example li{
    font-size: 12px;
  }

  .features-slider__nav-item {
    font-size: 14px;
  }
}

.sponsors__item img {
  width: 100%;
}

.info-block__content hr,
.sponsors hr {
  margin: 30px 0 15px;
}

